chore: bump version to 1.1.0 and update changelog for LLM config migration release
- Update tauri.conf.json, Cargo.toml version from 1.0.0 to 1.1.0
- Update latest.json with v1.1.0 release info and DMG download URLs
- Add changelog entry for v7: LLM config injection, --enable-native-access fix